add common styles and reusable components to project

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-   font-family: "Nunito", Roboto, system-ui, Tahoma, sans-serif;
+   font-family: "Fira Sans", sans-serif;
    box-sizing: border-box;
 }
 
